--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "^4.3.2",
     "@types/styled-components": "^4.1.14",
+    "date-fns": "^1.30.1",
     "firebase": "^5.9.4",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
