--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.8.12",
     "@types/react-dom": "16.8.3",
     "@types/react-router-dom": "^4.3.2",
+    "@types/react-select": "^2.0.17",
     "@types/styled-components": "^4.1.14",
     "date-fns": "^1.30.1",
     "firebase": "^5.9.4",
@@ -17,6 +18,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-select": "^2.4.3",
     "react-toastify": "^5.1.0",
     "styled-components": "^4.2.0",
     "typescript": "3.4.2"
