--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^4.1.14",
     "date-fns": "^1.30.1",
     "firebase": "^5.9.4",
+    "immer": "^3.1.1",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.8.6",
