--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/firebase": "^3.2.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.0",
@@ -11,11 +12,12 @@
     "@types/react-router-dom": "^4.3.2",
     "@types/react-select": "^2.0.17",
     "@types/styled-components": "^4.1.14",
-    "date-fns": "^1.30.1",
+    "date-fns": "^2.0.0-alpha.27",
     "firebase": "^5.9.4",
     "immer": "^3.1.1",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
@@ -40,6 +42,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/react-addons-css-transition-group": "^15.0.5"
+    "@types/react-addons-css-transition-group": "^15.0.5",
+    "@types/react-datepicker": "^2.3.0"
   }
 }
