--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/firebase": "^3.2.1",
     "@types/jest": "24.0.11",
+    "@types/lodash": "^4.14.123",
     "@types/node": "11.13.0",
     "@types/react": "16.8.12",
     "@types/react-dom": "16.8.3",
@@ -15,6 +16,7 @@
     "date-fns": "^2.0.0-alpha.27",
     "firebase": "^5.9.4",
     "immer": "^3.1.1",
+    "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
     "react-datepicker": "^2.5.0",
