--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/styled-components": "^4.1.14",
     "@types/uuid": "^3.4.4",
     "date-fns": "^2.0.0-alpha.27",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
     "firebase": "^5.9.4",
     "immer": "^3.1.1",
     "lodash": "^4.17.11",
@@ -45,6 +47,10 @@
   ],
   "devDependencies": {
     "@types/react-addons-css-transition-group": "^15.0.5",
-    "@types/react-datepicker": "^2.3.0"
+    "@types/react-datepicker": "^2.3.0",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-react": "^7.13.0"
   }
 }
