--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@types/styled-components": "^4.1.14",
     "@types/uuid": "^3.4.4",
     "date-fns": "^2.0.0-alpha.27",
-    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "firebase": "^5.9.4",
+    "eslint": "5.12.0",
     "immer": "^3.1.1",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
