--- a/package.json
+++ b/package.json
@@ -3,21 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/date-fns": "^2.6.0",
-    "@types/firebase": "^3.2.1",
-    "@types/jest": "24.0.11",
-    "@types/lodash": "^4.14.123",
-    "@types/node": "11.13.0",
-    "@types/react": "16.8.12",
-    "@types/react-dom": "16.8.3",
-    "@types/react-router-dom": "^4.3.2",
-    "@types/react-select": "^2.0.17",
-    "@types/styled-components": "^4.1.14",
-    "@types/uuid": "^3.4.4",
     "date-fns": "^2.0.0-alpha.27",
-    "eslint-config-airbnb": "^17.1.0",
     "firebase": "^5.9.4",
-    "eslint": "5.12.0",
     "immer": "^3.1.1",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
@@ -29,9 +16,9 @@
     "react-select": "^2.4.3",
     "react-spring": "^8.0.20",
     "react-toastify": "^5.1.0",
-    "styled-components": "^4.2.0",
-    "typescript": "3.4.2",
-    "uuid": "^3.3.2"
+    "styled-components": "^4.3.2",
+    "uuid": "^3.3.2",
+    "typescript": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,9 +35,16 @@
   "devDependencies": {
     "@types/react-addons-css-transition-group": "^15.0.5",
     "@types/react-datepicker": "^2.3.0",
-    "@typescript-eslint/eslint-plugin": "^1.10.2",
-    "@typescript-eslint/parser": "^1.10.2",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-react": "^7.13.0"
+    "@types/date-fns": "^2.6.0",
+    "@types/firebase": "^3.2.1",
+    "@types/jest": "24.0.11",
+    "@types/lodash": "^4.14.123",
+    "@types/node": "11.13.0",
+    "@types/react": "16.8.12",
+    "@types/react-dom": "16.8.3",
+    "@types/react-router-dom": "^4.3.2",
+    "@types/react-select": "^2.0.17",
+    "@types/styled-components": "^4.1.16",
+    "@types/uuid": "^3.4.4"
   }
 }
